<resources>

    <!-- General -->

    <string name="app_name">Mobile Movie Database</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="action_search">Search</string>
    <string name="loading_list_empty">There are no movies to display</string>
    <string name="personal_list_empty">There are no lists made yet</string>
    <string name="loading_error">Error occurred when loading</string>
    <string name="nothing_to_show">Unfortunately, there is nothing to be shown</string>
    <string name="undo">Undo</string>

    <!-- Error -->

    <string name="update_required">Data update required. Please connect to internet and try again</string>
    <string name="try_again">Try again</string>

    <!-- Toolbar titles -->

    <string name="type_movie_grid">Movies</string>
    <string name="search_movie_grid">Search:&#160;</string>
    <string name="discover_movie_grid">Discover:&#160;</string>
    <string name="discover_fragment">Discover</string>

    <!-- Image descriptions -->

    <string name="background_image">Background image</string>
    <string name="app_icon">The main icon of application</string>
    <string name="movie_image">Movie image</string>
    <string name="person_image">Person profile image</string>
    <string name="empty_image">No image</string>

    <!-- Section names -->

    <string name="main_cast_section">Main cast:</string>
    <string name="main_crew_section">Main crew:</string>
    <string name="description_section">Description</string>
    <string name="production_countries_section">Production countries</string>
    <string name="posters_section">Posters:</string>
    <string name="backdrops_section">Backdrops:</string>

    <!-- Release date related -->

    <string name="release_year_title">Release year</string>
    <string name="infinity">∞</string>
    <string name="max_release_date_value">2020</string>

    <!-- Custom lists -->

    <string name="create_new_list">Create a new list</string>
    <string name="add_to_lists_title">Add to the lists</string>
    <string name="select_a_list">Please select a list</string>
    <string name="successfully_uploaded_to_list">Movie successfully uploaded</string>
    <string name="failed_to_upload_to_list">Movie failed to be uploaded</string>
    <string name="being_uploaded_to_list">Movie is being uploaded</string>
    <string name="action_check_lists">"CHECK LISTS"</string>
    <string name="movie_list_deleted">Movie list was deleted</string>
    <string name="movie_deleted">Movie was deleted</string>
    <string name="updated">Last update:&#160;</string>

    <!-- Watchlist -->

    <string name="added_to_watchlist">Added to the watchlist</string>
    <string name="deleted_from_watchlist">Deleted from the watchlist</string>

    <!-- Parts for movie details -->

    <string name="score_ending">/10</string>
    <string name="min_ending">&#160;min</string>
    <string name="parenthesisStart">(</string>
    <string name="parenthesisEnd">)</string>

    <!-- About app fragment -->

    <string name="about_app">This application was made as a hobby. It is used for searching for movies by their genre, release date and original language or a title keyword, also being able to search the 4 different categories: popularity, vote average, upcoming and now playing. The information is retrieved from The Movie Database (TMDb).</string>

</resources>
