<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/launcher_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.launcher.LauncherActivity">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTintMode="src_over"
            android:contentDescription="@string/background_image"
            android:scaleType="centerCrop"
            android:src="@drawable/background"
            android:tintMode="src_over"
            app:tint="@color/white_60" />

        <ImageView
            android:id="@+id/icon"
            android:layout_width="230dp"
            android:layout_height="230dp"
            android:layout_marginTop="200dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/app_icon"
            android:src="@drawable/ic_main"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="200dp"
            android:minLines="2"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textAppearance="@style/WelcomeScreenTitle"
            app:layout_constraintTop_toBottomOf="@id/icon" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>