<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.mmdb.ui.details.overview.OverviewViewModel" />

        <import type="android.view.View" />
        <import type="com.jokubas.mmdb.util.ConverterUtilKt" />
        <import type="com.jokubas.mmdb.model.data.util.DataFormatterKt" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.MainActivity">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="@{viewModel.currentMovie != null ? View.GONE : View.VISIBLE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/loading_error_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading_error"
            android:visibility="@{viewModel.currentMovie == null ? progressBar.visibility == View.VISIBLE ? View.GONE : View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/information_layout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                android:visibility="@{viewModel.currentMovie != null ? View.VISIBLE : View.GONE}">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/main_details_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guideline"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_percent="0.45" />

                    <ImageView
                        android:id="@+id/backdrop_image_view"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:adjustViewBounds="true"
                        android:scaleType="centerCrop"
                        android:tintMode="src_over"
                        app:imageUriString="@{viewModel.currentMovie.backdropImageUriString}"
                        app:imageUrl="@{viewModel.currentMovie.backdropImageUrl}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:tint="@color/detailsTop" />

                    <ImageView
                        android:id="@+id/movie_poster_view"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:padding="@dimen/general_margin"
                        app:imageUriString="@{viewModel.currentMovie.posterImageUriString}"
                        app:imageUrl="@{viewModel.currentMovie.posterImageUrl}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/guideline"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="@dimen/general_margin"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/guideline"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:id="@+id/movie_title_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:includeFontPadding="false"
                            android:paddingBottom="@dimen/general_margin_half"
                            android:text="@{viewModel.currentMovie.title}"
                            android:textAppearance="@style/TitleOverview" />

                        <TextView
                            android:id="@+id/movie_release_date_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{viewModel.currentMovie.releaseDate}"
                            android:textAppearance="@style/ContentOverview" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <TextView
                                android:id="@+id/movie_runtime_view"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@{String.valueOf(viewModel.currentMovie.runtime)}"
                                android:textAppearance="@style/ContentOverview" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/min_ending"
                                android:textAppearance="@style/ContentOverview" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <TextView
                                android:id="@+id/movie_score_view"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@{viewModel.currentMovie.score}"
                                android:textAppearance="@style/ContentOverview" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/score_ending"
                                android:textAppearance="@style/ContentOverview" />

                        </LinearLayout>

                        <TextView
                            android:id="@+id/movie_genre_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{ConverterUtilKt.stringListToString(DataFormatterKt.getAnyNameList(viewModel.currentMovie.genres))}"
                            android:textAppearance="@style/ContentOverview" />

                    </LinearLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/general_margin_half"
                    app:cardBackgroundColor="@color/colorCardBackground"
                    app:cardCornerRadius="@dimen/default_card_corner_radius"
                    app:cardElevation="0dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="@dimen/general_margin">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/description_section"
                            android:textAppearance="@style/SectionTitleDetails" />

                        <TextView
                            android:id="@+id/movie_description_view"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:text="@{viewModel.currentMovie.description}"
                            android:textAppearance="@style/DescriptionDetails" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/production_countries_card_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/general_margin_half"
                    android:visibility="@{viewModel.currentMovie.productionCountryList.isEmpty() ? View.GONE : View.VISIBLE}"
                    app:cardBackgroundColor="@color/colorCardBackground"
                    app:cardCornerRadius="@dimen/default_card_corner_radius"
                    app:cardElevation="0dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="@dimen/general_margin">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/production_countries_section"
                            android:textAppearance="@style/SectionTitleDetails" />

                        <TextView
                            android:id="@+id/movie_countries_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:text="@{ConverterUtilKt.stringListToListedString(DataFormatterKt.getAnyNameList(viewModel.currentMovie.productionCountryList))}"
                            android:textAppearance="@style/DescriptionDetails" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </ScrollView>

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            app:itemIconTint="@android:color/white"
            app:itemTextColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:menu="@menu/details_bottom_bar_menu" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>